Added Swagger API support and moved API to logic to API files. Also added few inital unit tests
